--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     -->
     <title>React App</title>
   </head>
-  <body class="fullScreen">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
